--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "license": "MIT",
   "scripts": {
     "start": "electron app",
-    "build": "build"
+    "build": "build -mwl",
+    "publish": "export GH_TOKEN=d7a14b80013029c1aee46cf275cefb73d159ba57; build --publish always"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Quramy/squirrel-electron-update.git"
   },
   "devDependencies": {
     "electron": "^1.4.12",
