--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "version": "1.0.0",
+  "name": "my_app",
+  "version": "1.0.2",
   "description": "my app",
   "main": "main.js",
   "scripts": {},
