--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "squirrel-electron-update",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf release",
     "start": "electron app",
-    "build": "build -mwl",
-    "publish": "export GH_TOKEN=d7a14b80013029c1aee46cf275cefb73d159ba57; build --publish always"
+    "build": "build -m",
+    "publish": "export GH_TOKEN=d7a14b80013029c1aee46cf275cefb73d159ba57; build -m --publish always"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
     },
     "mac": {
       "icon": "icon/icon.icns",
-      "category": "public.app-category.social-networking"
+      "category": "public.app-category.social-networking",
+      "target": ["zip"]
     },
     "dmg": {
       "icon": "icon/icon.icns",
@@ -52,5 +54,8 @@
   "directories": {
     "app": "app",
     "output": "release"
+  },
+  "dependencies": {
+    "rimraf": "^2.5.4"
   }
 }
