--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf release",
     "start": "electron app",
-    "build": "build -mw",
+    "build": "build -m",
     "publish": "build -mw --publish always"
   },
   "repository": {
